k8s-deploy/prod_mini_frontend/mini-frontend-prod-Service.yaml
# same as prod 

apiVersion: v1
kind: Service
metadata:
  name: tilde-frontend-mini
  labels:
    app: tilde-frontend-mini
#   namespace: default
spec:
  ports:
    - port: 3000
      #   protocol: TCP
      targetPort: 3000
  selector:
    app: tilde-frontend-mini
  type: NodePort
