k8s-deploy/prod_mini_frontend/mini-frontend-prod-Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tilde-frontend-mini-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: tilde-frontend-mini-ip-prod
    networking.gke.io/managed-certificates: mini-frontend-managed-cert
    kubernetes.io/ingress.class: "gce"
  labels:
    app: tilde-frontend-mini
spec:
  defaultBackend:
    service:
      name: tilde-frontend-mini
      port:
        number: 3000


# gcloud compute addresses create tilde-frontend-mini-ip-prod --global --project umuzi-prod
# gcloud compute addresses describe tilde-frontend-mini-ip-prod --global --project umuzi-prod
